install system readline-devel and libjpeg-devel

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -2,8 +2,8 @@
 [buildout]
 extends =
     src/base.cfg
-    src/readline.cfg
-    src/libjpeg.cfg
+#    src/readline.cfg
+#    src/libjpeg.cfg
     src/python24.cfg
     src/python25.cfg
     src/python26.cfg
@@ -13,8 +13,8 @@ extends =
 
 parts =
     ${buildout:base-parts}
-    ${buildout:readline-parts}
-    ${buildout:libjpeg-parts}
+#    ${buildout:readline-parts}
+#    ${buildout:libjpeg-parts}
     ${buildout:python24-parts}
     ${buildout:python25-parts}
     ${buildout:python26-parts}
