We do not need to compile PIL here. Use easy_install Pillow later on.

--- a/src/python24.cfg
+++ b/src/python24.cfg
@@ -5,7 +5,7 @@ python24-parts =
     python-2.4-build
     python-2.4-virtualenv
     python-2.4
-    python-2.4-PIL
+#    python-2.4-PIL
     python-2.4-test
 #    python-2.4-buildout
 
