--- a/src/python27.cfg
+++ b/src/python27.cfg
@@ -5,7 +5,7 @@ python27-parts =
     python-2.7-build
     python-2.7-virtualenv
     python-2.7
-    python-2.7-PIL
+#    python-2.7-PIL
     python-2.7-test
 #     python-2.7-buildout
 
