--- a/src/python25.cfg
+++ b/src/python25.cfg
@@ -5,7 +5,7 @@ python25-parts =
     python-2.5-build
     python-2.5-virtualenv
     python-2.5
-    python-2.5-PIL
+#    python-2.5-PIL
     python-2.5-test
 #    python-2.5-buildout
 
