--- a/src/python26.cfg
+++ b/src/python26.cfg
@@ -5,7 +5,7 @@ python26-parts =
     python-2.6-build
     python-2.6-virtualenv
     python-2.6
-    python-2.6-PIL
+#    python-2.6-PIL
     python-2.6-test
 #    python-2.6-buildout
 
